# f2chat

./: .bazelrc  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  PHASE1_STATUS.md  README.md  WORKSPACE
lib/crypto/: BUILD.bazel  encrypted_polynomial.cc  encrypted_polynomial.h  fhe_context.cc  fhe_context.h  fhe_operations.cc  fhe_operations.h  polynomial.cc  polynomial.h  polynomial_identity.cc  polynomial_identity.h  polynomial_params.h  routing_polynomial.cc  routing_polynomial.h  server_key_manager.cc  server_key_manager.h
lib/message/: BUILD.bazel  encrypted_message.cc  encrypted_message.h
lib/network/: BUILD.bazel  gluing.cc  gluing.h  patch.cc  patch.h  sheaf_router.cc  sheaf_router.h
lib/simd/: BUILD.bazel  simd_batch.cc  simd_batch.h
lib/util/: BUILD.bazel  config.h
test/crypto/: BUILD.bazel  encrypted_polynomial_test.cc  fhe_context_test.cc  polynomial_identity_test.cc  polynomial_test.cc
test/integration/: BUILD.bazel  alice_to_bob_test.cc  simple_routing_test.cc
test/message/: BUILD.bazel  encrypted_message_test.cc
test/simd/: BUILD.bazel  simd_batch_test.cc
