# Copyright 2025 f2chat Contributors
# Licensed under the Apache License, Version 2.0

load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "fhe_context",
    srcs = ["fhe_context.cc"],
    hdrs = ["fhe_context.h"],
    deps = [
        "//lib/util:config",
        "//third_party/openfhe",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "fhe_operations",
    srcs = ["fhe_operations.cc"],
    hdrs = ["fhe_operations.h"],
    deps = [
        "//third_party/openfhe",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "server_key_manager",
    srcs = ["server_key_manager.cc"],
    hdrs = ["server_key_manager.h"],
    deps = [
        ":fhe_context",
        "//third_party/openfhe",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)
