# Copyright 2025 f2chat Contributors
# Licensed under the Apache License, Version 2.0

load("@rules_cc//cc:defs.bzl", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_test(
    name = "encrypted_message_test",
    size = "small",
    srcs = ["encrypted_message_test.cc"],
    deps = [
        "//lib/message:encrypted_message",
        "//third_party/openfhe",
        "@com_google_absl//absl/time",
        "@com_google_googletest//:gtest_main",
    ],
)
