# Copyright 2025 f2chat Contributors
# Licensed under the Apache License, Version 2.0

load("@rules_cc//cc:defs.bzl", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_test(
    name = "simd_batch_test",
    size = "medium",
    srcs = ["simd_batch_test.cc"],
    deps = [
        "//lib/crypto:fhe_context",
        "//lib/message:encrypted_message",
        "//lib/simd:simd_batch",
        "//lib/util:config",
        "//third_party/openfhe",
        "@com_google_googletest//:gtest_main",
    ],
)
